# Conway-s-game-of-life-in-python

./: README.md  experimentos.py  pyproject.toml
src/: __init__.py  juego_vida.py  rendimiento.py  visualizacion.py
