[project]
name = "conway-juego-vida"
version = "1.0.0"
description = "Juego de la Vida de Conway con Numba, visualización y análisis de rendimiento"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "numba>=0.57",
    "matplotlib>=3.7",
    "pillow>=9.0",       # necesario para guardar GIFs con matplotlib
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
